chore(security): restrict CORS origins to specific frontend URLs
allowed frontend deployed url